--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="info-img">
           <img
-            src="./img/mainhead.jpeg"
+            src="./mainhead.jpeg"
             alt=""
           />
         </div>
